Clear read- and write buffers

Added calls to clear the write and read buffers when
- setSocketDescriptor is called
- abort is called

Removed clears the read and write buffers from
the documentation of resetSocketLayer.

Added documentation to setSocketDescriptor
describing that read and write buffers are cleared.

Task-number: QTBUG-28914
Change-Id: I25a4b679708bdea0b259c50f1d10a3e9271dabb9
Reviewed-by: Peter Hartmann <phartmann@blackberry.com>